# VVAS

./: .gitignore
vvas-accel-sw-libs/: meson.build  meson_options.txt
vvas-accel-sw-libs/cm_package/: cmpk_chart.cpp  cmpk_chart.hpp  cmpk_ffc.hpp  cmpk_json_utils.hpp  cmpk_platformstats.hpp
vvas-accel-sw-libs/vvas_xdpuinfer/: meson.build
vvas-accel-sw-libs/vvas_xdpuinfer/src/: vvas_posedetect.cpp  vvas_posedetect.hpp  vvas_ultrafast.cpp  vvas_ultrafast.hpp  vvas_xdpuinfer.cpp  vvas_xdpumodels.hpp
vvas-accel-sw-libs/vvas_xpostsegmentation/: meson.build
vvas-accel-sw-libs/vvas_xpostsegmentation/src/: vvas_xpostsegmentation.cpp  vvas_xpostsegmentation.hpp
vvas-gst-plugins/gst-libs/gst/vvas/: gstinferenceprediction.h  gstvvasinpinfer.h
